force-app/main/default/objects/Payment_Receipt_Line_Item__c/Payment_Receipt_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Payment Receipt Line Item</label>
    <nameField>
        <displayFormat>PRLI-{00000000}</displayFormat>
        <label>Payment Receipt Line Item No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Receipt Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>