force-app/main/default/objects/Payment_Receipt_Line_Item__c/fields/Amt_Avail_for_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Amt_Avail_for_Allocation__c</fullName>
    <formula>Document_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amt Avail for Allocation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>