force-app/main/default/objects/Payment_Receipt_Line_Item__c/fields/DB_CR__c.field-meta.xml
<CustomField>
    <fullName>DB_CR__c</fullName>
    <defaultValue>&quot;DB&quot;</defaultValue>
    <label>DB/CR</label>
    <length>2</length>
    <type>Text</type>
</CustomField>