force-app/main/default/objects/Payment_Receipt_Line_Item__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <defaultValue>&quot;Receipt&quot;</defaultValue>
    <label>Document Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>