force-app/main/default/objects/Payment_Receipt_Line_Item__c/fields/GST_Percentage__c.field-meta.xml
<CustomField>
    <fullName>GST_Percentage__c</fullName>
    <label>GST %</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>