force-app/main/default/objects/Payment_Receipt_Line_Item__c/fields/Payment_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Payment_Receipt__c</fullName>
    <label>Payment Receipt</label>
    <referenceTo>Payment_Receipt__c</referenceTo>
    <relationshipLabel>Payment Receipt Line Items</relationshipLabel>
    <relationshipName>Payment_Receipt_Line_Items_del</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>