force-app/main/default/objects/Payment_Receipt_Line_Item__c/fields/Receipt_GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>Receipt_GST_Amount__c</fullName>
    <formula>Document_Amount__c * Value(Text( GST_Percentage__c ))/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receipt GST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>