force-app/main/default/objects/Payment_Receipt_Line_Item__c/fields/Sales_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Agreement</label>
    <referenceTo>Sales_Agreement__c</referenceTo>
    <relationshipLabel>Payment Receipt Line Items</relationshipLabel>
    <relationshipName>Payment_Receipt_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>