force-app/main/default/objects/Payment_Receipt_Line_Item__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vehicle Deposit</fullName>
            </value>
            <value>
                <fullName>Balance Payment</fullName>
            </value>
            <value>
                <fullName>COE Deposit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>